// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-pbehavior-form Renders \`storage-settings-pbehavior-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      PBehavior data storage
    </div>
    <!---->
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        history="1611230000"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    help-text="When switched on, inactive PBehaviors will be deleted after the defined time period from the last event."
    label="Delete PBehavior data after"
    name="pbehavior.delete_after"
    value="[object Object]"
  />
</div>
`;

exports[`storage-settings-pbehavior-form Renders \`storage-settings-pbehavior-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      PBehavior data storage
    </div>
    <!---->
  </div>
  <!---->
  <c-enabled-duration-field-stub
    help-text="When switched on, inactive PBehaviors will be deleted after the defined time period from the last event."
    label="Delete PBehavior data after"
    name="pbehavior.delete_after"
    value="[object Object]"
  />
</div>
`;
